@@ -11,13 +11,13 @@ HTMLOUTPUTFILE weathermap.html
 IMAGEOUTPUTFILE weathermap.png
 
 NODE node1
-	POSITION 200 200
+    POSITION 200 200
     LABEL node1
 	
 NODE node2
-	POSITION 500 200
+    POSITION 500 200
     LABEL node2
 
 LINK firstlink
-	NODES node1 node2
-	BANDWIDTH 30M
+    NODES node1 node2
+    BANDWIDTH 30M
